# DNAVMM

./: .gitignore  DNA_BERT_encoder.py  DNA_Classifier.py  ModelModule.py  README.md  Read_large_file.py  dataset.py  env_example  fusion.py  model.py  plotcreator.py  pyproject.toml  requirements.txt  run_tsne.py  unimodal_dna.py  unimodal_image.py  useful_functions.py
class_indices/: class.npy  family.npy  genus.npy  order.npy  species.npy
