[project]
name = "mmeb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets==3.6.0",
    "dotenv>=0.9.9",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "scikit-learn>=1.8.0",
    "torch==2.7.0",
    "torchvision==0.22.0",
    "transformers>=5.5.4",
    "triton==3.3.0",
]
